# textgame-cpp

./: CMakeLists.txt  CS1PC20 – Coursework 2.sln  README.md  area.cpp  character.h  inventory.cpp  inventory.h  item.h  main.cpp
CS1PC20 – Coursework 2/: CS1PC20 – Coursework 2.vcxproj  CS1PC20 – Coursework 2.vcxproj.filters  area.h  character.cpp  game_map.txt  item.cpp  main.cpp  player.cpp  player.h  room.cpp  room.h
CS1PC20 – Coursework 2/CS1PC20 .f4b0b827/Debug/: CS1PC20 – Coursework 2.exe.recipe  CS1PC20 – Coursework 2.ilk  vc143.idb
CS1PC20 – Coursework 2/CS1PC20 .f4b0b827/Debug/CS1PC20 .f4b0b827.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CS1PC20 – Coursework 2.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CS1PC20 – Coursework 2/x64/Debug/: CS1PC20 – Coursework 2.exe.recipe  CS1PC20 – Coursework 2.ilk  vc143.idb
CS1PC20 – Coursework 2/x64/Debug/CS1PC20 .f4b0b827.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CS1PC20 – Coursework 2.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
